...
                  android:paddingLeft="5dp"
                  android:textColor="#9e9e9e"
                  android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/title"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="5dp"
...
                  android:paddingLeft="5dp"
                  android:textColor="#9e9e9e"
                  android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/description"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="5dp"
...
