<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <!--<include layout="@layout/content_main"/>-->
    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent" android:layout_height="match_parent"/>


</android.support.design.widget.CoordinatorLayout>